--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Age Calculator</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
     <div class="container">
@@ -18,26 +20,18 @@
             </div>
             <div class="form-group">
                 <button type="submit">Calculate Age</button>
+                <button type="button" id="resetBtn">Reset</button>
             </div>
         </form>
 
         <div class="result-container" id="resultContainer">
             <div class="result" id="result">
-                <!-- <div class="result-item">
-                    <h3>Weeks Passed:</h3>
-                    <p>ageInWeeks</p>
-                </div>
-                <div class="result-item">
-                    <h3>Weeks Passed:</h3>
-                    <p>ageInWeeks</p>
-                </div>
-                <div class="result-item">
-                    <h3>Weeks Passed:</h3>
-                    <p>ageInWeeks</p>
-                </div> -->
+                <!-- Result items will be inserted here dynamically -->
             </div>
         </div>
     </div>
- <script src="script.js"></script>   
+
+    <script src="script.js"></script>
 </body>
+
 </html>
